can export compare chart

--- a/report.html
+++ b/report.html
@@ -163,7 +163,7 @@
         <div class="ex-title">Graph Comparing</div>
         <button class="sh-btn" id="showChart">Show</button>
       </div>
-      <div id="compareChartCon" style="background-color: none; display: none;">
+      <div id="compareChartCon" style="display: none;">
         <button id="resetZoom2" class="timeDuration"><i class="fas fa-redo-alt"></i></button>
         <button onclick="compareChartTem()" class="timeDuration" id="dayDuration">Tem</button> 
         <button onclick="compareChartHumi()" class="timeDuration" id="dayDuration">Humi</button> 
