--- a/report.html
+++ b/report.html
@@ -164,14 +164,14 @@
         <button class="sh-btn" id="showChart">Show</button>
       </div>
       <div id="compareChartCon" style="display: none;">
+        <button onclick="compareChartTem()" class="timeDuration" id="tempCompare">Temperature</button> 
+        <button onclick="compareChartHumi()" class="timeDuration" id="humiCompare">Humidity</button> 
         <button id="resetZoom2" class="timeDuration"><i class="fas fa-redo-alt"></i></button>
-        <button onclick="compareChartTem()" class="timeDuration" id="dayDuration">Tem</button> 
-        <button onclick="compareChartHumi()" class="timeDuration" id="dayDuration">Humi</button> 
-        <div class="calendarTime">
+        <div class="calendarTime2">
           <label for="date_now">Start:</label>
           <input id="date_now" type="date" name="task_date" />
           <!--Time:<input id="time" type="time" name="task_time" /> -->
-          <button onclick="compareGraphSet()" class="getTimeBtn">Get Now</button>
+          <button onclick="compareGraphSet()" class="getTimeBtn">Get</button>
         </div>
         <canvas id="compareChart"  width="800px" height="400px"></canvas>
       </div>
@@ -233,7 +233,7 @@
         if (checkAllData.checked == true) {
           tbl_f.disabled = true;
           tbl_t.disabled = true;
-          renderTable(device, date_data30_D_tranfer, temp_data30_D, humi_data30_D);
+          renderTable(date_data30_D_tranfer, temp_data30_D, humi_data30_D);
         } else {
           tbl_f.disabled = false;
           tbl_t.disabled = false;
