fixed export fucntion

--- a/report.html
+++ b/report.html
@@ -143,8 +143,26 @@
         </div>
 
         <div class="tbl-con" style="display: none;">
-          <table class="table2excel" id="table2excel" style="display: none;" data-cols-width="10,50,20,20">
+          <table class="table2excel" id="table2excel" style="display: none;" data-cols-width="10,50,20,20" data-b-a-s="medium">
             <thead>
+              <tr style="display: none;">
+                <td
+                  id="header-excel"
+                  colspan="4"
+                  data-f-sz="16"
+                  data-a-h="center"
+                  data-a-v="middle">
+                </td>
+              </tr>
+              <tr style="display: none;">
+                <td 
+                  id="time-excel" 
+                  colspan="4" 
+                  data-f-sz="14" 
+                  data-a-h="center" 
+                  data-a-v="middle">
+                </td>
+              </tr>
               <tr>
                 <th>No.</th>
                 <th>Date and Time</th>
