--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
 
       // art 1
-      /*
+      
       apiKey: "AIzaSyAr3ZGs6nEdPB3lC1TtqeEIfrhnK2XO060",
       authDomain: "iot-digital.firebaseapp.com",
       databaseURL: "https://iot-digital-default-rtdb.asia-southeast1.firebasedatabase.app",
@@ -109,9 +109,10 @@
       storageBucket: "iot-digital.appspot.com",
       messagingSenderId: "629848329523",
       appId: "1:629848329523:web:d965041a327a06ae3f4246",
-      measurementId: "G-PC06B29EVX"*/
+      measurementId: "G-PC06B29EVX"
       
       // alpha
+      /*
       apiKey: "AIzaSyB5zraDdpuRbVhHC0pekc9hKrKfteX0ncE",
       authDomain: "digital-farming-52edb.firebaseapp.com",
       databaseURL: "https://digital-farming-52edb-default-rtdb.asia-southeast1.firebasedatabase.app",
@@ -119,7 +120,7 @@
       storageBucket: "digital-farming-52edb.appspot.com",
       messagingSenderId: "1054001690174",
       appId: "1:1054001690174:web:8a665041773bc078c1436f",
-      measurementId: "G-WYRKFCRBYV"
+      measurementId: "G-WYRKFCRBYV"*/
     };
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
