fixed counter function

--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
     <div class="view-con">
       <i class="far fa-eye"></i>
       <div id="view-counter"></div>
+      <i class="fas fa-download"></i>
+      <div id="download-counter"></div>
     </div>    
 
     <!-- Main Container -->
