--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-database.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-firestore.js"></script>
+    <!-- <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-firestore.js"></script> -->
 
     <!-- Auto Refresh Webpage Script -->
     <script type = "text/JavaScript">
