--- a/report.html
+++ b/report.html
@@ -40,7 +40,7 @@
    <!-- <script src="path/to/chartjs-plugin-zoom/dist/chartjs-plugin-zoom.min.js"></script> -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
 
-    <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-firestore.js"></script>
+    <!-- <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-firestore.js"></script> -->
 
     
   </head>
